MET-5941 Cleanup